# LittleMinionComputer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
examples/: division.lmc  smallest.lmc  triangleNumbers.lmc
include/lmc/: assembler.hpp  datum.hpp  instructionSet.hpp  littleMinionComputer.hpp  programState.hpp
src/: datum.cpp  instructionSet.cpp  littleMinionComputer.cpp  programState.cpp
